--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap");
 
 :root {
-  --primary-white: #fff;
-  --primary-grey: #9aa19c;
+  --primary-whitish: #f2f2f2;
+  --primary-greenish: #bcd97e;
+  --primary-green: #84bf04;
   --primary-dark: rgba(255, 255, 255, 0);
+  --primary-orange: orange;
+  --primary-red: red;
+  --primary-hover-red: pink;
 }
 
 body {
@@ -48,7 +52,11 @@ body {
     transform: rotate(360deg);
   }
 }
-/* ***************************************************** */
+/* *******************NAVBAR********************************** */
+nav {
+  z-index: 2;
+}
+
 .logo {
   width: 6rem;
 }
@@ -64,7 +72,7 @@ nav ul li {
 .navbar-nav > li > a {
   margin-right: 0.75rem;
   margin-left: 0.75rem;
-  color: var(--primary-white) !important ;
+  color: var(--primary-whitish) !important ;
   border-bottom: 0.1875rem solid var(--primary-dark);
 }
 .navbar-brand {
@@ -74,8 +82,72 @@ nav ul li {
 }
 .navbar-nav > li > a.active,
 .navbar-nav > li > a.active:focus {
-  border-bottom: 0.1875rem solid var(--primary-grey);
+  border-bottom: 0.1875rem solid var(--primary-greenish);
 }
 .navbar-nav > li > a:hover {
-  border-bottom: 0.1875rem solid var(--primary-grey);
+  border-bottom: 0.1875rem solid var(--primary-greenish);
+}
+/* ***************HEADER WRAPPER********************** */
+.header-wrapper {
+  position: relative;
+  background: url(background3.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+.main-info {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condensed" sans-serif;
+  z-index: 1;
+}
+.main-info h1 {
+  color: var(--primary-greenish);
+  text-transform: uppercase;
+}
+
+/* *******typed text******* */
+.typed-text {
+  font-size: 2 rem;
+  color: var(--primary-greenish);
+}
+
+@media (max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.5rem !important;
+  }
+  .typed-text {
+    font-size: 1.3rem !important;
+  }
+}
+
+/* ************HEADER MAIN OFFER BUTTON**********8 */
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: var(--primary-white);
+  margin-top: 2rem;
+}
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--primary-green);
+  transition: 0.2s ease-in-out;
+}
+
+/* ***********PARTICLES******** */
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vh;
+  z-index: 1;
 }
