--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,13 @@ nav ul li {
   padding: 0 !important ;
   height: 2.5rem !important;
 }
+
+@media (max-width: 768px) {
+  .navbar-brand {
+    width: 7rem;
+  }
+}
+
 .navbar-nav > li > a.active,
 .navbar-nav > li > a.active:focus {
   border-bottom: 0.1875rem solid var(--primary-greenish);
@@ -110,14 +117,14 @@ nav ul li {
   z-index: 1;
 }
 .main-info h1 {
-  color: var(--primary-greenish);
-  text-transform: uppercase;
+  color: var(--primary-whitish);
+  /* text-transform: uppercase; */
 }
 
 /* *******typed text******* */
 .typed-text {
   font-size: 2 rem;
-  color: var(--primary-greenish);
+  color: var(--primary-whitish);
 }
 
 @media (max-width: 768px) {
@@ -131,16 +138,16 @@ nav ul li {
 
 /* ************HEADER MAIN OFFER BUTTON**********8 */
 .btn-main-offer {
-  border: 1px solid var(--primary-red);
+  border: 1px solid var(--primary-orange);
   text-transform: uppercase;
   border-radius: 0;
   padding: 0.625rem 0.75rem 0.75rem 0.75rem;
-  color: var(--primary-white);
+  color: var(--primary-orange);
   margin-top: 2rem;
 }
 .btn-main-offer:hover {
   text-decoration: none;
-  background-color: var(--primary-green);
+  background-color: var(--primary-orange);
   transition: 0.2s ease-in-out;
 }
 
@@ -150,4 +157,36 @@ nav ul li {
   height: 100vh;
   width: 100vh;
   z-index: 1;
+}
+/* *****************ABOUT ME***************** */
+.block-item {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+}
+.block-item-1 {
+  margin: 0.5rem;
+  border: 0.5rem;
+  padding: 0.5rem;
+  width: 30rem;
+  background-color: var(--primary-whitish);
+}
+.block-item-1 > img {
+  height: 200px;
+  width: 200px;
+}
+.block-item-2 {
+  margin: 0.5rem;
+  border: 0.5rem;
+  padding: 0.5rem;
+  width: 30rem;
+  background-color: var(--primary-whitish);
+}
+.block-item-2 h3 {
+  text-align: center;
+}
+.block-item-2 p {
+  text-align: justify;
+  font-size: medium;
 }
